add sms. allow 5000 port from outside

--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
 GRAFANA_USERNAME=admin
 GRAFANA_PASSWORD=ikDbV27jP2&Qqiqssdf
 
+# Hash in base64 with "htpasswd -nBC 10 "" | tr -d ':\n'" command for PROMETHEUS_PASSWORD_HASH variable
 PROMETHEUS_USERNAME=admin
-PROMETHEUS_PASSWORD=sR947obWAcc4G3Y4qyd
+PROMETHEUS_PASSWORD=ikDbV27jP2&Qqiqssdf
+PROMETHEUS_PASSWORD_HASH='$2y$10$UIEKYZ.0jPKFvalFGyOY1.hG2oQnghodI/gQkeRgiyR3y6vcrSROq'
 
 RETENTION_TIME=365d
 
