--- a/alertmanager/alertmanager.yml
+++ b/alertmanager/alertmanager.yml
@@ -3,21 +3,21 @@ route:
   group_wait: 30s
   group_interval: 5m
   repeat_interval: 3h
-  receiver: 'telegram'
+  receiver: 'TelegramAndSms'
 
 receivers:
-  - name: 'telegram'
-    telegram_configs:
-    - bot_token: '7596665134:AAEeN9kn2imlPbiR8M6umgPOFq1bKdoRtUo'
-      api_url: "https://api.telegram.org"
-      chat_id: -1002376975407
-      parse_mode: 'MarkdownV2'
-      send_resolved: true
-      message: |
-        🚨 *Alert*: `{{ .CommonLabels.alertname }}`
-        *Instance*: `{{ .CommonLabels.instance }}`
-        *Status*: `{{ .Status | toUpper }}`
-  - name: 'sms'
+
+  - name: 'TelegramAndSms'
     webhook_configs:
-      - url: 'http://127.0.0.1:5000/send-sms'  # Your webhook server URL
+      - url: 'http://157.90.104.96:5000/webhook'
         send_resolved: true
+    telegram_configs:
+      - bot_token: '7596665134:AAEeN9kn2imlPbiR8M6umgPOFq1bKdoRtUo'
+        api_url: "https://api.telegram.org"
+        chat_id: -1002376975407
+        parse_mode: 'MarkdownV2'
+        send_resolved: true
+        message: |
+          🚨 *Alert*: `{{ .CommonLabels.alertname }}`
+          *Instance*: `{{ .CommonLabels.instance }}`
+          *Status*: `{{ .Status | toUpper }}`
