--- a/prometheus/web.yml
+++ b/prometheus/web.yml
@@ -1,2 +1,2 @@
 basic_auth_users:
-    admin: $2y$10$KPODW7CVW6Q/RAVuBBxidOvbZUhwI6cD8sIsq9aVeivCVF./trviy
+  admin: $2y$10$UIEKYZ.0jPKFvalFGyOY1.hG2oQnghodI/gQkeRgiyR3y6vcrSROq
