--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,20 +9,6 @@ services:
       - prometheus_data:/prometheus
       - ./blackbox/http:/etc/prometheus/http
       - ./blackbox/icmp:/etc/prometheus/icmp
-#    command:
-#      - /bin/sh
-#      - -c
-#      - |
-#        echo "basic_auth_users:" > /etc/prometheus/web.yml &&
-#        echo "  ${PROMETHEUS_USERNAME}: \"${PROMETHEUS_PASSWORD_HASH}\"" >> /etc/prometheus/web.yml &&
-#        /bin/prometheus \
-#          --config.file=/etc/prometheus/prometheus.yml \
-#          --web.config.file=/etc/prometheus/web.yml \
-#          --storage.tsdb.path=/prometheus \
-#          --storage.tsdb.retention.time=${RETENTION_TIME} \
-#          --web.console.libraries=/etc/prometheus/console_libraries \
-#          --web.console.templates=/etc/prometheus/consoles \
-#          --web.enable-lifecycle
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--web.config.file=/etc/prometheus/web.yml'
@@ -31,9 +17,6 @@ services:
       - '--web.console.libraries=/etc/prometheus/console_libraries'
       - '--web.console.templates=/etc/prometheus/consoles'
       - '--web.enable-lifecycle'
-#    environment:
-#      - PROMETHEUS_USERNAME=${PROMETHEUS_USERNAME}
-#      - PROMETHEUS_PASSWORD_HASH=${PROMETHEUS_PASSWORD_HASH}
     ports:
       - "9090:9090"
     networks:
@@ -73,6 +56,9 @@ services:
     #  - "9093:9093"
     networks:
       prom_net:
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+
 
   node-exporter:
     image: prom/node-exporter:v1.8.2
@@ -90,6 +76,7 @@ services:
       - '--collector.filesystem.ignored-mount-points="^/(sys|proc|dev|host|etc)($|/)"'
     networks:
       prom_net:
+
 
   blackbox-exporter:
     image: prom/blackbox-exporter:v0.25.0
